# kcomms

./: .gitignore  .gitmodules  CMakeLists.txt
client/: cli.cpp  cli.hpp  client.cpp  client.hpp  main.cpp  storage.cpp  storage.hpp
server/: database.cpp  database.hpp  main.cpp  server.cpp  server.hpp
